<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:background="@color/light_grey"
        android:gravity="end|bottom"
        android:layout_height="250dp"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_seven" />

        <Button
            android:id="@+id/btnEight"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_eight" />

        <Button
            android:id="@+id/btnNine"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_nine" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:text="@string/calc_btn_operator_divide" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_four" />

        <Button
            android:id="@+id/btnFive"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_five" />

        <Button
            android:id="@+id/btnSix"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_six" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:text="@string/calc_btn_operator_multiply" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_one" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_two" />

        <Button
            android:id="@+id/btnThree"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_three" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:text="@string/calc_btn_operator_minus" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDecimalPoint"
            android:text="@string/calc_btn_operator_dot" />

        <Button
            android:id="@+id/btnZero"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:text="@string/calc_btn_number_zero" />

        <Button
            android:id="@+id/btnClr"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onClear"
            android:text="@string/calc_btn_clr" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:text="@string/calc_btn_operator_plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEqual"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:onClick="onEqual"
            android:text="@string/calc_btn_equal" />

    </LinearLayout>

</LinearLayout>